--- a/CalculadoraDifal/CalculadoraDifal.csproj
+++ b/CalculadoraDifal/CalculadoraDifal.csproj
@@ -119,7 +119,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Entities\Enums\Enums.cs" />
+    <Compile Include="Entities\Enums\Origin.cs" />
     <Compile Include="Entities\InitialParams.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Program.cs" />
